--- a/sysQA_pointUseList.htm
+++ b/sysQA_pointUseList.htm
@@ -41,6 +41,11 @@
                 <div class="container">
                     <div class="title">
                         <h2>點數兌換列表</h2>
+                        <div class="function">
+                            <ul>
+                                <li class="icon_back"><a href="#" onclick="linkFunction()">回列表頁</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- flex-12 -->
 
@@ -89,7 +94,7 @@
                                                     <td align="center">10</td>
 													<td>兌換 xxx</td>
                                                     <td>線上</td>
-													<td align="center">child 於 2016/12/27 下午 01:01:50 兌換</td>
+													<td>使用者(child) 於 2016/12/27 下午 01:01:50 兌換</td>
                                                     <td align="center"></td>													
                                                 </tr>
                                                 <tr>
@@ -112,7 +117,7 @@
 													</td>
                                                     <td align="center">
                                                         <div class="btn_grp">
-                                                            <a href="sysQA_pointUseCancle.htm?id=22345" class="btn">取消兌換</a>
+                                                            <a href="#" class="btn" onclick="confirmEvent();alertEvent();refreshPage();">取消兌換</a>
                                                         </div>
                                                     </td>			
 												</tr>
@@ -122,7 +127,7 @@
                                                     <td align="center">0</td>
 													<td align="center">取消兌換: xxxxxx </td>
                                                     <td>線上</td> 
-													<td>child 於 2016/12/27 下午 01:01:50 取消兌換</td>
+													<td>使用者(child) 於 2016/12/27 下午 01:01:50 取消兌換</td>
                                                     <td align="center"></td>																
 												</tr>
                                             </tbody>
@@ -165,6 +170,20 @@
     // first example
     $('header').load("header.htm");
     $('aside').load("aside.htm");
+    </script>
+    <script>
+        function confirmEvent() {
+            confirm("確認後點數將退回使用者點數，但若點數已過期、將無法復原點數。確認取消點數兌換？");
+        }
+        function alertEvent() {
+            alert("兌換點數成功");
+        }
+        function linkFunction() {
+        location.href = "sysQA_pointList.htm";
+        }
+        function refreshPage(){
+            window.location.reload();
+        } 
     </script>
 </body>
 
