--- a/index_list.html
+++ b/index_list.html
@@ -491,9 +491,11 @@
                                 <li>小博士問答條列清單 <a href="sysQA_list.htm" target="_blank"></a></li>
                                 <li>問答管理－新增 <a href="sysQA_add.htm" target="_blank"></a>｜編修 <a href="sysQA_edit.htm" target="_blank"></a></li>
                                 <li>答案審核－答題列表 <a href="sysQA_answerList.htm" target="_blank"></a>｜讀者答題審核 <a href="sysQA_userinfo.htm" target="_blank"></a></li>
-                                <li><span style="color:red;">** 新增：紙本答題紀錄</span> <a href="sysQA_answerAdd.htm" target="_blank"></a></li>
-                                <li><span style="color:red;">** 新增</span> <a href="sysQA_pointList.htm" target="_blank"></a></li>
-                                <li><span style="color:red;">** 新增</span> <a href="sysQA_pointUseList.htm" target="_blank"></a></li>
+                                <li><span style="color:red;">** 調整版面：紙本答題紀錄</span> <a href="sysQA_answerAdd.htm" target="_blank"></a></li>
+                                <li><span style="color:red;">** 增加過期/即將過期點數</span> <a href="sysQA_pointList.htm" target="_blank"></a></li>
+                                <li><span style="color:red;">** 補</span> <a href="sysQA_pointLogList.htm" target="_blank"></a></li>
+                                <li><span style="color:red;">** 新增取消兌換效果</span> <a href="sysQA_pointUseList.htm" target="_blank"></a></li>
+                                <li><span style="color:red;">** 新增臨櫃兌換頁</span> <a href="sysQA_pointUseAdd.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
