--- a/sysQA_pointLogList.htm
+++ b/sysQA_pointLogList.htm
@@ -17,6 +17,7 @@
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="vendor/highlight/github-gist.css">
+    <link rel="stylesheet" href="css/customize.css">
 </head>
 
 <body>
@@ -39,40 +40,15 @@
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>點數管理列表</h2>
-                        <button class="btn btn-primary btn-adv">
-                            <i class="i_search"></i></button>
-                    </div>
-                    <!-- flex-12 -->
-                    <div class="flex-12">
-                        <div class="adv_search">
-                            <div class="col">
-                                <div class="content_block">
-                                    <div class="_head">
-                                        <h3>查詢</h3>
-                                    </div>
-                                    <div class="_content">
-                                        <div class="flex-form flex-8-4">
-                                            <div class="form_grp">
-                                                <div class="labelEffect">
-                                                    <input name="search_user_id" id="search_user_id" type="text">
-                                                    <label>借閱證號碼</label>
-                                                </div>
-
-																		
-                                            </div>
-
-
-                                        </div>
-                                        <div class="btn_grp">
-                                            <button class="btn reset">取消</button>
-                                            <button class="btn btn-primary">確認</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <h2>點數取得列表</h2>
+                        <div class="function">
+                            <ul>
+                                <li class="icon_back"><a href="javascript: history.back();">回上一頁</a></li>
+                            </ul>
                         </div>
                     </div>
+                    <!-- flex-12 -->
+
                     <!-- flex-12 -->
                     <div class="flex-12">
                         <div class="col ">
@@ -103,57 +79,29 @@
                                             <thead>
                                                 <tr>
                                                     <th>借閱證號碼</th>
-                                                    <th>讀者姓名</th>
-                                                    <th>累積點數</th>
-                                                    <th>已兌換點數</th>
-                                                    <th>剩餘點數</th>
-                                                    <th>30天內即將過期</th>
-                                                    <th>最後更新時間</th>
-                                                    <th>臨櫃兌換</th>
+                                                    <th>點數取得時間</th>
+                                                    <th>點數</th>
+                                                    <th>題目 / 內容</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
                                                     <td align="center">A13061830601</td>
-                                                    <td align="center">周岳祥 (Mr)</td>
-                                                    <td align="center"><a href="sysQA_pointLogList.htm?user_id=A13061830601">10</td>
-                                                    <td align="center"><a href="sysQA_pointUseList.htm?user_id=A13061830601">5</td>
-                                                    <td align="center">2 (過期3點)</td>
+                                                    <td align="center">2017/5/18 下午 06:30:44取得</td>
                                                     <td align="center">1</td>
-                                                    <td align="center">2016/02/19 13:31:04</td>
-													<td align="center">
-                                                        <div class="btn_grp">
-                                                            <a href="sysQA_pointUseAdd.htm?user_id=A13061830601" class="btn">兌換</a>
-                                                        </div>
-													</td>
+													<td>被列入世界文化遺產，以中國佛教文化為特色的巨型石窟，分別是山西大同的雲崗石窟､河南洛陽的龍門石窟，請問位於甘肅敦煌的是什麼石窟？</td>
                                                 </tr>
                                                 <tr>
-                                                    <td align="center">A13081924104</td>
-                                                    <td align="center">李秉睿 (Mr)</td>
-                                                    <td align="center"><a href="sysQA_pointLogList.htm?user_id=A13081924104">190</td>
-                                                    <td align="cente"r><a href="sysQA_pointUseList.htm?user_id=A13081924104">170</td>
-                                                    <td align="center">20 (過期0點)</td>
-                                                    <td align="center">6</td>
-                                                    <td align="center">2016/02/19 13:31:04</td>
-													<td align="center">
-                                                        <div class="btn_grp">
-                                                            <a href="sysQA_pointUseAdd.htm?user_id=A13061830601" class="btn">兌換</a>
-                                                        </div>
-													</td>                                                
+                                                    <td align="center">A13061830601</td>
+                                                    <td align="center">2017/5/18 上午 10:59:29取得 </td>
+                                                    <td align="center">1</td>
+													<td>在"論語"這本書其中的季式篇中,孔子認為對我們人生有助益的朋友有三種,稱為"益者三友",請問小朋友這是哪三種朋友?(答案請註明資料來源) </td>                                                
 												</tr>
                                                 <tr>
-                                                    <td align="center">A13097799900</td>
-                                                    <td align="center">黃以翔 (Mr)</td>
-                                                    <td align="center"><a href="sysQA_pointLogList.htm?user_id=A13097799900">16</td>
-                                                    <td align="center"><a href="sysQA_pointUseList.htm?user_id=A13097799900">10</td>
-                                                    <td align="center">6 (過期0點)</td>
-                                                    <td align="center">6</td>
-                                                    <td align="center">2016/02/19 13:31:04</td>
-													<td align="center">
-                                                        <div class="btn_grp">
-                                                            <a href="sysQA_pointUseAdd.htm?user_id=A13061830601" class="btn">兌換</a>
-                                                        </div>
-													</td>                                                
+                                                    <td align="center">A13061830601</td>
+                                                    <td align="center">2017/5/13 下午 01:12:56取得</td>
+                                                    <td align="center">1</td>
+													<td>請問小朋友 人類基因組是由幾對染色體所構成？ (答案須標明出處，如以網頁為出處需註明詳細網址)提示：網頁 </td>                                                
 												</tr>
                                             </tbody>
                                         </table>
@@ -195,6 +143,20 @@
     // first example
     $('header').load("header.htm");
     $('aside').load("aside.htm");
+    </script>
+    <script>
+        function confirmEvent() {
+            confirm("確認後點數將退回使用者點數，但若點數已過期、將無法復原點數。確認取消點數兌換？");
+        }
+        function alertEvent() {
+            alert("兌換點數成功");
+        }
+        function linkFunction() {
+        location.href = "sysQA_pointList.htm";
+        }
+        function refreshPage(){
+            window.location.reload();
+        } 
     </script>
 </body>
 
