--- a/sysQA_answerList.htm
+++ b/sysQA_answerList.htm
@@ -104,25 +104,6 @@
                             <div class="content_block">
 
                                 <div class="_head">
-                                    <!--div class="tag">
-                                        預約狀態： 
-                                        <ul>
-                                            <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="bookList?seatch_status=">未繳清</a></li>
-                                            <li><a href="#">訂單逾期</a></li>
-                                            <li><a href="#">已繳清</a></li>
-                                            <li><a href="#">待上傳收據</a></li>
-                                            <li><a href="bookList?seatch_status=20">預約完成</a></li>
-                                            <li><a href="#">活動結束</a></li>
-                                            <li><a href="bookList?sseatch_status=100">訂單解約</a></li>
-                                        </ul>
-                                        ｜聯繫狀態：
-                                        <ul>
-                                            <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="bookList?seatch_newMsg=7">有新訊息</a></li>
-                                            <!--li><a href="#">無未讀訊息</a></li-->
-                                        </ul>
-                                    </div-->
 
                                 <!-- 頁碼 -->
                                     <div class="pagination">
@@ -217,7 +198,7 @@
     <script>
     // first example
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
 </body>
 
