--- a/sysQA_pointList.htm
+++ b/sysQA_pointList.htm
@@ -120,7 +120,7 @@
                                                     <td align="center"><a href="sysQA_pointUseList.htm?user_id=A13061830601">5</td>
                                                     <td align="center">2 (過期3點)</td>
                                                     <td align="center">1</td>
-                                                    <td align="center">2016/02/19 13:31:04</td>
+                                                    <td>2016/02/19 13:31:04</td>
 													<td align="center">
                                                         <div class="btn_grp">
                                                             <a href="sysQA_pointUseAdd.htm?user_id=A13061830601" class="btn">兌換</a>
@@ -134,7 +134,7 @@
                                                     <td align="cente"r><a href="sysQA_pointUseList.htm?user_id=A13081924104">170</td>
                                                     <td align="center">20 (過期0點)</td>
                                                     <td align="center">6</td>
-                                                    <td align="center">2016/02/19 13:31:04</td>
+                                                    <td>2016/02/19 13:31:04</td>
 													<td align="center">
                                                         <div class="btn_grp">
                                                             <a href="sysQA_pointUseAdd.htm?user_id=A13061830601" class="btn">兌換</a>
@@ -148,7 +148,7 @@
                                                     <td align="center"><a href="sysQA_pointUseList.htm?user_id=A13097799900">10</td>
                                                     <td align="center">6 (過期0點)</td>
                                                     <td align="center">6</td>
-                                                    <td align="center">2016/02/19 13:31:04</td>
+                                                    <td>2016/02/19 13:31:04</td>
 													<td align="center">
                                                         <div class="btn_grp">
                                                             <a href="sysQA_pointUseAdd.htm?user_id=A13061830601" class="btn">兌換</a>
@@ -194,7 +194,7 @@
     <script>
     // first example
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
 </body>
 
