--- a/sysQA_pointUseList.htm
+++ b/sysQA_pointUseList.htm
@@ -169,7 +169,7 @@
     <script>
     // first example
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
     <script>
         function confirmEvent() {
