--- a/sysQA_userinfo.htm
+++ b/sysQA_userinfo.htm
@@ -17,6 +17,7 @@
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="vendor/highlight/github-gist.css">
+    <link rel="stylesheet" href="css/customize.css">
 </head>
 
 <body>
@@ -40,6 +41,11 @@
                 <div class="container">
                     <div class="title">
                         <h2>答題審核</h2>
+                        <div class="function">
+                            <ul>
+                                <li class="icon_back"><a href="javascript: history.back();">回上一頁</a></li>
+                            </ul>
+                        </div>
                     </div>
 
                     <!-- flex-12 -->
@@ -105,7 +111,7 @@
                                         </div>	
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <select name="point" id="point">
+                                                <select name="point" id="point" class="dynamicCol used">
                                                     <option value="0">未審核</option>
                                                     <option value="1">答對</option>
                                                     <option value="2">答錯</option>
@@ -113,7 +119,8 @@
                                                 </select>
                                                 <label>答案審核<abbr*</abbr></label>
                                             </div>                   										
-                                        </div>	
+                                        <div class="help">請注意，每月七日為最後審核期限，點數一經發送則不可再進行編修</div>	
+                                        </div>
                                         <div class="btn_grp">
 											<button class="btn btn-orange">儲存</button>
 											<button class="btn">取消</button>
@@ -123,7 +130,7 @@
                             </div>
 							
                             <!-- 右側資料widget -->
-                            <div class="publish_block">
+                            <div class="publish_block dradd">
                                 <!-- 每種不同功能，都用block區分 -->
                                 <div class="block">
                                     <div class="_head">
@@ -146,6 +153,21 @@
 											{usr_class}年 {usr_class_name}班		
 									</div>                                
 								</div>
+                                <div class="block">
+                                    <div class="_head">
+                                        <h3>編修資訊</h3>
+                                    </div>
+                                    <div class="log">
+                                        <ul>
+                                            <li>
+                                                建立者：<span><i class="i_man"></i></span>劉佳淇(總館，admin)<br/><span><i class="i_clock"></i></span>2019/11/26 14:26:10 
+                                            </li>
+                                            <li>
+                                                最後編修者：<span><i class="i_man"></i></span>李曉明(總館，admin)<br/><span><i class="i_clock"></i></span>2019/11/26 14:26:10 
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
 					
                             </div>
                         </div>
@@ -167,7 +189,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
 </body>
 
