--- a/sysQA_edit.htm
+++ b/sysQA_edit.htm
@@ -211,7 +211,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
 </body>
 
