--- a/sysQA_list.htm
+++ b/sysQA_list.htm
@@ -373,7 +373,7 @@
     <script>
     // first example
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
 </body>
 
