--- a/tpmlwebref_review.htm
+++ b/tpmlwebref_review.htm
@@ -34,14 +34,14 @@
                 <ul>
                     <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">客製化管理</a></li>
-                    <li>問題轉介維護</li>
+                    <li>問題審核</li>
                 </ul>
             </div>
             <!-- gird section -->
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>問題轉介回覆管理</h2>
+                        <h2>問題審核管理</h2>
                         <button class="btn btn-primary btn-adv">
                             <i class="i_search"></i></button>
                     </div>
@@ -64,7 +64,7 @@
                                             <div class="form_grp">
                                                 <div class="labelEffect">
                                                     <input name="search_name" id="search_name" type="text" value="">
-                                                    <label>轉介課室</label>
+                                                    <label>長官姓名</label>
                                                 </div>
                                             </div>
                                             <div class="form_grp">
@@ -72,8 +72,8 @@
                                                     <select id="" name="">
                                                         <option value="" selected="" disabled="disabled">
                                                         </option>
-                                                        <option value="1" selected>轉介時間</option>
-                                                        <option value="2">回覆時間</option>
+                                                        <option value="1" selected>陳核時間</option>
+                                                        <option value="2">審核時間</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -122,13 +122,11 @@
                                 </div>
                                 <div class="_head">
                                     <div class="tag">
-                                        回覆狀態：
+                                        審核狀態：
                                         <ul>
-                                            <li class="active"><a href="#">全部</a></li>
-                                            <li><a href="#">待答覆</a></li>
-                                            <li><a href="#">未答覆</a></li>
-                                            <li><a href="#">已回覆</a></li>
-                                        </ul>
+                                            <li class="active"><a href="#">審核通過</a></li>
+                                            <li><a href="#">審核不公過</a></li>
+
                                         </ul>
                                     </div>
 
@@ -154,106 +152,101 @@
                                         <table class="table_hover">
                                             <thead>
                                                 <tr>
-                                                    <th class="text-left">
-                                                        <a href="#">序號<i class="i_sort"></i></a>
-                                                    </th>
-                                                    <th class="text-left">
-                                                        <a href="#">案件編號<i class="i_sort"></i></a>
-                                                    </th>
+                                                    <th>序號</th>
                                                     <th>讀者問題描述</th>
-                                                    <th class="text-left">轉介時間</th>
-                                                    <th>轉介課室</th>
-                                                    <th>回覆館員</th>
-                                                    <th class="text-left">回覆狀態</th>
-                                                    <th class="text-left">回覆時間</th>
-                                                    <th>編輯</th>
+                                                    <th>
+                                                        <a href="#">陳核時間<i class="i_sort"></i></a>
+                                                    <th>審核長官</th>
+                                                    <th class="text-left">審核狀態</th>
+                                                    <th>
+                                                        <a href="#">審核時間<i class="i_sort"></i></a>
+                                                    </th>
+                                                    <th>審核</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
                                                     <td class="num">999</td>
-                                                    <td class="num">tpml-Z11</td>
                                                     <td>
                                                         敬啟者您好我目前正在撰寫一篇研究性的論文，題目是「公共圖書館開闢財源之研究」，想調查國內各縣市公共圖書館因經費短缺，如何增加圖書館的收入來源，不知能否提供貴館有哪些收入來源的管道以便彙整撰寫。謝謝您
                                                     </td>
-                                                    <td><time>2024/11/15 <br>下午18:09</time></time></td>
-                                                    <td>秘書室</td>
-                                                    <td>陳館員</td>
-                                                    <td><span class="red">待答覆</span></td>
+
+                                                    <td><time>2024/11/16<br>下午18:09</time></time></td>
+                                                    <td>陳長官</td>
+                                                    <td><span class="red">待審核</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="tpmlwebref_referralsedit.htm" class="btn"><i
-                                                                    class="i_edit"></i>編輯</a>
+                                                            <a href="tpmlwebref_reviewedit.htm" class="btn"><i
+                                                                    class="i_edit"></i>審核</a>
                                                         </div>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td class="num">998</td>
-                                                    <td class="num">tpml-Z10</td>
                                                     <td>
                                                         敬啟者您好我目前正在撰寫一篇研究性的論文，題目是「公共圖書館開闢財源之研究」，想調查國內各縣市公共圖書館因經費短缺，如何增加圖書館的收入來源，不知能否提供貴館有哪些收入來源的管道以便彙整撰寫。謝謝您
                                                     </td>
-                                                    <td><time>2024/11/15 <br>下午18:09</time></time></td>
-                                                    <td>兒童室</td>
-                                                    <td>陳館員</td>
-                                                    <td><span class="orange">未答覆</span></td>
+
+                                                    <td><time>2024/11/16<br>下午18:09</time></time></td>
+                                                    <td>陳長官</td>
+                                                    <td><span class="blue">審核通過</span></td>
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="tpmlwebref_referralsedit.htm" class="btn"><i
-                                                                    class="i_edit"></i>編輯</a>
+                                                            <a href="tpmlwebref_reviewedit.htm" class="btn"><i
+                                                                    class="i_edit"></i>審核</a>
                                                         </div>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td class="num">997</td>
-                                                    <td class="num">tpml-Z09</td>
                                                     <td>
                                                         敬啟者您好我目前正在撰寫一篇研究性的論文，題目是「公共圖書館開闢財源之研究」，想調查國內各縣市公共圖書館因經費短缺，如何增加圖書館的收入來源，不知能否提供貴館有哪些收入來源的管道以便彙整撰寫。謝謝您
                                                     </td>
-                                                    <td><time>2024/11/15 <br>下午18:09</time></time></td>
-                                                    <td>閱覽課</td>
-                                                    <td>廖館員</td>
-                                                    <td><span class="gray">已回覆</span></td>
+
                                                     <td><time>2024/11/16<br>下午18:09</time></time></td>
+                                                    <td>陳長官</td>
+                                                    <td><span class="green">審核不通過</span></td>
+                                                    <td><time>2024/11/16 <br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="#" class="btn"><i class="i_edit"></i>編輯</a>
+                                                            <a href="tpmlwebref_reviewedit.htm" class="btn"><i
+                                                                    class="i_edit"></i>審核</a>
                                                         </div>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td class="num">996</td>
-                                                    <td class="num">tpml-Z08</td>
                                                     <td>
                                                         敬啟者您好我目前正在撰寫一篇研究性的論文，題目是「公共圖書館開闢財源之研究」，想調查國內各縣市公共圖書館因經費短缺，如何增加圖書館的收入來源，不知能否提供貴館有哪些收入來源的管道以便彙整撰寫。謝謝您
                                                     </td>
-                                                    <td><time>2024/11/15 <br>下午18:09</time></time></td>
-                                                    <td>閱覽課</td>
-                                                    <td>李館員</td>
-                                                    <td><span class="gray">已回覆</span></td>
+
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
+                                                    <td>陳長官</td>
+                                                    <td><span class="green">審核不通過</span></td>
+                                                    <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="#" class="btn"><i class="i_edit"></i>編輯</a>
+                                                            <a href="tpmlwebref_reviewedit.htm" class="btn"><i
+                                                                    class="i_edit"></i>審核</a>
                                                         </div>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td class="num">995</td>
-                                                    <td class="num">tpml-Z07</td>
                                                     <td>
                                                         敬啟者您好我目前正在撰寫一篇研究性的論文，題目是「公共圖書館開闢財源之研究」，想調查國內各縣市公共圖書館因經費短缺，如何增加圖書館的收入來源，不知能否提供貴館有哪些收入來源的管道以便彙整撰寫。謝謝您
                                                     </td>
-                                                    <td><time>2024/11/15 <br>下午18:09</time></time></td>
-                                                    <td>閱覽課</td>
-                                                    <td>林館員</td>
-                                                    <td><span class="gray">已回覆</span></td>
+
                                                     <td><time>2024/11/16 <br>下午18:09</time></time></td>
+                                                    <td>陳長官</td>
+                                                    <td><span class="green">審核不通過</span></td>
+                                                    <td><time>2024/11/16<br>下午18:09</time></time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="#" class="btn"><i class="i_edit"></i>編輯</a>
+                                                            <a href="tpmlwebref_reviewedit.htm" class="btn"><i
+                                                                    class="i_edit"></i>審核</a>
                                                         </div>
                                                     </td>
                                                 </tr>
