--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -139,7 +139,7 @@
                     <li><a href="tpmlblind_drUserranklist.htm"><span>(視障)博士通答題清單</span></a></li>
                     <li><a href="tpmlwebref_questionsearch.htm"><span>(服務)讀者問題回覆管理</span></a></li>
                     <li><a href="tpmlwebref_referrals.htm"><span>(服務)問題轉介回覆管理</span></a></li>
-                    <li><a href="tpmlwebref_referrals.htm"><span>(服務)問題審核管理</span></a></li>
+                    <li><a href="tpmlwebref_review.htm"><span>(服務)問題審核管理</span></a></li>
                     <li><a href="tpmlwebref_chat.htm"><span>(服務)客服留言清單</span></a></li>
                     <li><a href="tpmlwebref_statistics.htm"><span>(服務)參考服務統計</span></a></li>
                 </ul>
