--- a/index_list.html
+++ b/index_list.html
@@ -665,7 +665,7 @@
                             <ul>
                                 <li>讀者問題回覆管理 <a href="tpmlwebref_questionsearch.htm" target="_blank"></a></li>
                                 <li>讀者問題回覆編輯 <a href="tpmlwebref_questionsearchnew.htm" target="_blank"></a></li>
-                                <li>問題轉介回覆管理 <a href="tpmlwebref_referralsedit.htm" target="_blank"></a></li>
+                                <li>問題轉介回覆管理 <a href="tpmlwebref_referrals.htm" target="_blank"></a></li>
                                 <li>問題轉介回覆編輯 <a href="tpmlwebref_referralsedit.htm" target="_blank"></a></li>
                                 <li>問題審核管理 <a href="tpmlwebref_review.htm" target="_blank"></a></li>
                                 <li>問題審核編輯 <a href="tpmlwebref_reviewedit.htm" target="_blank"></a></li>
