--- a/index_list.html
+++ b/index_list.html
@@ -665,6 +665,9 @@
                             <ul>
                                 <li>讀者問題回覆管理 <a href="tpmlwebref_questionsearch.htm" target="_blank"></a></li>
                                 <li>讀者問題回覆編輯 <a href="tpmlwebref_questionsearchnew.htm" target="_blank"></a></li>
+                                <li>陳核信件 <a href="tpmlwebref_questionsearchnewemail1.htm" target="_blank"></a></li>
+                                <li>轉介信件 <a href="tpmlwebref_questionsearchnewemail2.htm" target="_blank"></a></li>
+                                <li>寄信給讀者 <a href="tpmlwebref_questionsearchnewemail3.htm" target="_blank"></a></li>
                                 <li>問題轉介回覆管理 <a href="tpmlwebref_referrals.htm" target="_blank"></a></li>
                                 <li>問題轉介回覆編輯 <a href="tpmlwebref_referralsedit.htm" target="_blank"></a></li>
                                 <li>問題審核管理 <a href="tpmlwebref_review.htm" target="_blank"></a></li>
